--- a/JenkinsToolsWpf/Controls/JobList.xaml
+++ b/JenkinsToolsWpf/Controls/JobList.xaml
@@ -132,12 +132,12 @@
                         </MenuItem.Icon>
                     </MenuItem>
 
-                    <MenuItem Header="XPath Replace" x:Name="mnuXPathReplace"
+                    <!--<MenuItem Header="XPath Replace" x:Name="mnuXPathReplace"
                               Click="mnuXPathReplace_Click">
                         <MenuItem.Icon>
                             <Image Source="../Images/XPath_32x.png" Height="16" Width="16" />
                         </MenuItem.Icon>
-                    </MenuItem>
+                    </MenuItem>-->
 
 
                     <MenuItem Header="Duplicate Selected Job" x:Name="mnuDuplicateJob" Click="mnuDuplicateJob_Click" InputGestureText="Ctrl+D">
